Attempting to fix corners on mobile when loading images

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -252,6 +252,9 @@ a:hover {
     -webkit-filter: none;
     filter: none;
     opacity: 1;
+    -webkit-border-radius: 13px;
+    -moz-border-radius: 13px;
+    border-radius: 13px;
 }
 
 .name {
